--- a/website/src/main.scss
+++ b/website/src/main.scss
@@ -1,1 +1,19 @@
 // Import styles here
+
+body,
+html {
+  height: 100%;
+  margin: 0;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+#map,
+body,
+html {
+  height: 100%;
+  width: 100%;
+}
