--- a/website/src/styles/main.css
+++ b/website/src/styles/main.css
@@ -1,5 +1,3 @@
-// Import styles here
-
 body,
 html {
   height: 100%;
@@ -16,4 +14,10 @@ body,
 html {
   height: 100%;
   width: 100%;
+}
+
+#logo {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
